Styling: actually fixed overflow

--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,7 @@ h1 {
   text-align: left;
 }
 .ui.move.reveal > .hidden.content > p {
-  font-size: 1.2em !important;
+  font-size: 1.1em !important;
   text-align: left;
 }
 
